# itmo_term_1_parallel_algorithms

./: .gitignore  CMakeLists.txt
assignments/0/: main.cpp
assignments/1/: main.cpp
assignments/10/: Assignment10.cpp
assignments/11/: Assignment11.cpp
assignments/12/: Assignment12.cpp
assignments/13/: Assignment13.cpp
assignments/14/: Assignment14.cpp
assignments/15/: Assignment15.cpp
assignments/16/: Assignment16.cpp
assignments/17/: Assignment17.cpp
assignments/18/: Assignment18_master.cpp  Assignment18_slave.cpp
assignments/19/: Assignment19_client.cpp  Assignment19_server.cpp
assignments/2/: main.cpp
assignments/20/: Assignment20.cpp
assignments/21/: Assignment21.cpp
assignments/4/: Assignment4.cpp
assignments/5/: Assignment5.cpp  Assignment5ExecutionTime.cpp
assignments/6/: Assignment6.cpp
assignments/7/: Assignment7.cpp
assignments/8/: Assignment8.cpp
assignments/9/: Assignment9.cpp
