cmake_minimum_required(VERSION 3.21)
project(itmo_term_1_parallel_algorithms)

set(CMAKE_CXX_STANDARD 17)

#set(CMAKE_CXX_COMPILER "/opt/homebrew/bin/g++-11")
#SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
set(CMAKE_CXX_COMPILER "/opt/homebrew/bin/mpic++")

add_executable(assignment0 assignments/0/main.cpp)
add_executable(assignment1 assignments/1/main.cpp)
add_executable(assignment2 assignments/2/main.cpp)
add_executable(assignment3 assignments/3/Assignment3.cpp)
add_executable(assignment4 assignments/4/Assignment4.cpp)
add_executable(assignment5 assignments/5/Assignment5.cpp)
add_executable(assignment5ExecutionTime assignments/5/Assignment5ExecutionTime.cpp)
add_executable(assignment6 assignments/6/Assignment6.cpp)
add_executable(assignment7 assignments/7/Assignment7.cpp)
add_executable(assignment8 assignments/8/Assignment8.cpp)
add_executable(assignment9 assignments/9/Assignment9.cpp)
add_executable(assignment10 assignments/10/Assignment10.cpp)
add_executable(assignment11 assignments/11/Assignment11.cpp)
add_executable(assignment12 assignments/12/Assignment12.cpp)
add_executable(assignment13 assignments/13/Assignment13.cpp)
add_executable(assignment14 assignments/14/Assignment14.cpp)
add_executable(assignment15 assignments/15/Assignment15.cpp)
add_executable(assignment16 assignments/16/Assignment16.cpp)
add_executable(assignment17 assignments/17/Assignment17.cpp)
add_executable(assignment18Master assignments/18/Assignment18_master.cpp)
add_executable(assignment18Slave assignments/18/Assignment18_slave.cpp)
add_executable(assignment19Server assignments/19/Assignment19_server.cpp)
add_executable(assignment19Client assignments/19/Assignment19_client.cpp)
add_executable(assignment20 assignments/20/Assignment20.cpp)
add_executable(assignment21 assignments/21/Assignment21.cpp)

include_directories(/opt/homebrew/Cellar/libomp/13.0.0/)
include_directories(/opt/homebrew/Cellar/open-mpi/4.1.2/)